Fix sticky nav on mobile.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@ html, body{
 /** COMPONENTS **/
 @import 'components/navigation';
 @import 'components/images';
+@import 'components/carousels';
 @import 'components/cards';
 @import 'components/figures';
 @import 'components/text-rule';
@@ -33,6 +34,15 @@ html, body{
 @import 'components/jumbotron';
 section{
   margin-bottom: 2vw;
+}
+#yield{
+  position: relative;
+  top:0;
+  left:0;
+  width: 100vw;
+  // height: 100vh;
+  // overflow: hidden;
+  // overflow-y: auto;
 }
 
 /** VIEWS **/
